# CaTS

./: .clang-format  AddNew.md  CMakeLists.txt  CaTS.cc  Instructions.md  LICENSE  README.md  README.txt  readCalorimeterHits.cc  readInteractionHits.cc  readPhotonHits.cc  readSimEnergyDeposit.cc  readSimTrajectory.cc  readTrackerHits.cc  readTrajectory.cc  setup_opticks.sh
gdml/: DRSingleCrystal.gdml  HydrogenTarget.gdml  LAr.xml  LArDisk.gdml  LArMaterial.xml  LArProperties.xml  LArTPC.gdml  LArTPC_dev.gdml  MinimalLArTPCdetector.gdml  PhotoSensor.gdml  SiliconDisk.gdml  TPBMaterial.xml  TPBProperties.xml  cryoLArTPC.gdml  icarus_nowire.gdml  lArTarget.gdml  lArTargetSED.gdml  magField.root  microboonev12_nowires.gdml  phase1b.gdml  sarah.gdml  simpleLArTPC-dev.gdml  simpleLArTPC.gdml  simpleLArTPC.gdml~  simpleLArTPCcbr.gdml  singlecrystal_BGO.gdml  singlecrystal_PbF2.gdml  wls.gdml  wls_dev.gdml  zen.gdml
include/: CaTSClasses.hh  CaTSVersion.hh  ConfigurationManager.hh  DetectorConstruction.hh  EMPHATICMagneticField.hh  MCEventAction.hh  MCParticle.hh  MCSteppingAction.hh  MCTrackingAction.hh  MCTrajectory.hh  MyG4Cerenkov.hh  MyG4OpticalPhysics.hh  MyG4Scintillation.hh  MyU4SensorIdentifier.h  PhotonHit.hh  PhotonSD.hh  RootIO.hh  RootIO.hh_save  SimEnergyDeposit.hh  SimEnergyDepositHit.hh  SimEnergyDepositSD.hh  SimStep.hh  SimTrajectory.hh  SimTrajectorySD.hh  SteppingAction.hh  myHit.hh  mySensitiveDetector.hh
macros/: electrons.mac  hydrogen.mac  muon_BGO_crystal.mac  muon_PbF2_crystal.mac  optical.mac  pointlike.mac  pointlike_G4.mac  target.mac  targetSED.mac  targetST.mac  test_G4.mac  test_mag.mac  time.mac  time_G4.mac
scripts/: checkpr.sh
src/: ActionInitialization.cc  ConfigurationManager.cc  DetectorConstruction.cc  EMPHATICMagneticField.cc  EventAction.cc  EventAction.cc_save  MCEventAction.cc  MCParticle.cc  MCSteppingAction.cc  MCTrackingAction.cc  MCTrajectory.cc  MyG4Cerenkov.cc  MyG4OpticalPhysics.cc  MyG4Scintillation.cc  PhotonSD.cc  PhysicsConfigurator.cc  PrimaryGeneratorAction.cc  RadiatorSD.cc  RootIO.cc  RootIO.cc_SAVE  RunAction.cc  SimEnergyDeposit.cc  SimEnergyDepositHit.cc  SimEnergyDepositSD.cc  SimStep.cc  SimTrajectory.cc  SimTrajectorySD.cc  SteppingAction.cc  TrackerSD.cc  mySensitiveDetector.cc
xml/: selection.xml
